fix parallax section jumping when scrolling on mobile

--- a/frontEnd/next/next-basic-template/src/app/sections/parallax/ParallaxSection.module.css
+++ b/frontEnd/next/next-basic-template/src/app/sections/parallax/ParallaxSection.module.css
@@ -1,4 +1,10 @@
 .background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100lvh;
+  z-index: -20;
   background: repeating-linear-gradient(
     -45deg,
     theme('colors.primary.700'),
@@ -6,5 +12,4 @@
     theme('colors.secondary.700') 200px,
     theme('colors.secondary.300') 400px
   );
-  background-attachment: fixed;
 }
